--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.17.0
   shrine_images: ^2.0.1
   http: ^0.13.5
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
