--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ flutter:
     - packages/shrine_images/37-0.jpg
     - assets/images/
     - assets/SVG/
+    - assets/fitness_app/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
